--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Co-evolution</title>
-    <link rel="stylesheet" href="../Css/styles.css" />
+    <link rel="stylesheet" href="./Public/Css/styles.css" />
     <title>Document</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
             <button><a href="./loginBefore.html">Ingresar</a></button>
             </form>
 
-        <img src="../Images/Logo.PNG" alt="">
+        <img src="./Public/Images/Logo.PNG" alt="">
         <a href="#" class="terminos"> Terminos y condiciones - politicas de privacidad</a>
         
     </div>
