--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <form action="/" class="formularioLogin">
             <label for="email"> Email: </label>    
             <input type="email"  name="email" class="emailForm" required>                
+            <span id="emailOK"></span>
             <label for="Contraseña"> Contraseña: </label>    
             <input type="password"  name="Contraseña" class="passForm" required>                
             <a href="#"> Olvidaste tu Contraseña </a>
