--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     </div>
     <div class="lateral2">
         <div class="errores"><ul></ul></div>
-        <form action="/" class="formularioLogin">
+        <form action="/loginBefore.html" class="formularioLogin">
             <label for="email"> Email: </label>    
             <input type="email"  name="email" class="emailForm" required>                
             <span id="emailOK"></span>
             <label for="Contraseña"> Contraseña: </label>    
             <input type="password"  name="Contraseña" class="passForm" required>                
             <a href="#"> Olvidaste tu Contraseña </a>
-            <input type="submit" value="enviar" class="submit">
+            <input type="submit" value="enviar" class="submit"></a>
             </form>
 
         <img src="./Public/Images/Logo.PNG" alt="">
