--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <span id="emailOK"></span>
             <label for="Contraseña"> Contraseña: </label>    
             <input type="password"  name="Contraseña" class="passForm" required>                
+            <span id="passok"></span>
             <a href="#"> Olvidaste tu Contraseña </a>
             <input type="submit" value="enviar" class="submit"></a>
             </form>
