--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="lateral2">
         <div class="errores"><ul></ul></div>
-        <form action="/loginBefore.html" class="formularioLogin">
+        <form action="/" class="formularioLogin">
             <label for="email"> Email: </label>    
             <input type="email"  name="email" class="emailForm" required>                
             <span id="emailOK"></span>
