--- a/loginBefore.html
+++ b/loginBefore.html
@@ -1,26 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./Public/Css/styles.css">
-    <title>Playground Co-evolution</title>
+    <link rel="stylesheet" href="./Public/Css/styles1.css" />
+    <script src="js/main.js" type="module" defer></script>
+    <title>Proyecto con Víctor Robles WEB</title>
 </head>
-<body>
-    <h1>continuara</h1>
-    <div class="main">
-            <div class="encabezado">
-                <h2>Playground</h2>
-            </div>
-            <div class="mensaje"> <h1>!Hola, <strong>Andres Steven</strong> </h1></div>
-            <div class="menu">
-                <article></article>
-                
-            </div>
-            <div class="piePagina"></div>
 
+<body>
+
+    <div class="layout">
+        <!--Barra de navegación-->
+        <nav class="nav">
+            <ul>
+                <li><a href="#">Progreso</a></li>
+                <li><a href="#">contenido</a></li>
+                <li><a href="#">Acceso a grabaciones y zoom</a></li>
+                <li><a href="#">Formularios</a></li>
+                <li><a href="#">Formatos</a></li>
+                <li><a href="#">Info general</a></li>
+            </ul>
+        </nav>
+
+        <!--Contenido principal-->
+        <section id="content" class="content">
+
+            <!--aqui van las peliculas-->
+        
+            <article class="peli-item">
+                <h3 class="title">Nombre del Curso</h3>
+                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nobis
+                    eveniet animi commodi, non velit iure illum inventore est quisquam possimus reprehenderit minima
+                    porro perspiciatis assumenda temporibus, unde sint quod.</p>
+
+                <button class="ingresar">Ingresar</button>
+
+            </article>
+
+
+
+        </section>
+
+        <!--Barra lateral-->
+        <aside class="lateral">
+            <div class="search">
+                <h3 class="title">Buscador</h3>
+                <form>
+                    <input type="text" id="search_field" />
+                    <button id="search">Buscar</button>
+                </form>
+            </div>
+
+            <div class="add">
+                <h3 class="title">Imformacion adiciobal</h3>
+                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nobis!</p>
+
+            </div>
+        </aside>
+
+        <!--Pie de página-->
+        <footer class="footer">
+            &copy; Co-evolution - <a href="https://co-evolution.com.co/">Coaching & consultoria</a>
+        </footer>
 
     </div>
+
+
 </body>
+
 </html>
