--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="lateral2">
         <div class="errores"><ul></ul></div>
-        <form action="/" class="formularioLogin">
+        <form action="./loginBefore.html" class="formularioLogin">
             <label for="email"> Email: </label>    
             <input type="email"  name="email" class="emailForm" required>                
             <span id="emailOK"></span>
@@ -27,7 +27,7 @@
             <input type="password"  name="Contraseña" class="passForm" required>                
             <span id="passok"></span>
             <a href="#"> Olvidaste tu Contraseña </a>
-            <input type="submit" value="enviar" class="submit"></a>
+            <input type="submit" value="Enviar" class="submit">
             </form>
 
         <img src="./Public/Images/Logo.PNG" alt="">
