--- a/loginBefore.html
+++ b/loginBefore.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/2da8e91210.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./Public/Css/styles1.css" />
-    <script src="js/main.js" type="module" defer></script>
     <title>Proyecto con Víctor Robles WEB</title>
 </head>
 
@@ -15,11 +15,13 @@
     <div class="layout">
         <!--Barra de navegación-->
         <nav class="nav">
+
+            <div class="hamburguer-button">
+                <i class="fas fa-bars"></i>
+            </div>
             <ul>
                 <li><a href="#">Progreso</a></li>
-                <li><a href="#">contenido</a></li>
                 <li><a href="#">Acceso a grabaciones y zoom</a></li>
-                <li><a href="#">Formularios</a></li>
                 <li><a href="#">Formatos</a></li>
                 <li><a href="#">Info general</a></li>
             </ul>
@@ -28,8 +30,8 @@
         <!--Contenido principal-->
         <section id="content" class="content">
 
-            <!--aqui van las peliculas-->
-        
+            <!--aqui van el contenido curso-->
+
             <article class="peli-item">
                 <h3 class="title">Nombre del Curso</h3>
                 <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nobis
@@ -40,8 +42,15 @@
 
             </article>
 
+            <article class="peli-item">
+                <h3 class="title">Nombre del Curso</h3>
+                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nobis
+                    eveniet animi commodi, non velit iure illum inventore est quisquam possimus reprehenderit minima
+                    porro perspiciatis assumenda temporibus, unde sint quod.</p>
 
+                <button class="ingresar">Ingresar</button>
 
+            </article>
         </section>
 
         <!--Barra lateral-->
