--- a/loginBefore.html
+++ b/loginBefore.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2da8e91210.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./Public/Css/styles1.css" />
-    <title>Proyecto con Víctor Robles WEB</title>
+    <title>Co-evolution</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                 <li><a href="#">Progreso</a></li>
                 <li><a href="#">Acceso a grabaciones y zoom</a></li>
                 <li><a href="#">Formatos</a></li>
-                <li><a href="#">Info general</a></li>
+                <li><a href="https://co-evolution.com.co/" target="_blank">Info general</a></li>
             </ul>
         </nav>
 
@@ -64,15 +64,15 @@
             </div>
 
             <div class="add">
-                <h3 class="title">Imformacion adiciobal</h3>
-                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nobis!</p>
+                <h3 class="title">Están listos para desarrollar su verdadero potencial?</h3>
+                <p class="description">Co-Evolution SAS, es una empresa conformada por seres humanos conscientes para prestar un servicio humano de calidad y con responsabilidad, nos enfocamos en el desarrollo de las personas y en la consultoría organizacional de forma sostenible (personas, ambiente y economía) para el logro de resultados extraordinarios.</p>
 
             </div>
         </aside>
 
         <!--Pie de página-->
         <footer class="footer">
-            &copy; Co-evolution - <a href="https://co-evolution.com.co/">Coaching & consultoria</a>
+            &copy; Co-evolution - <a href="https://co-evolution.com.co/"  target="_blank">Coaching & consultoria</a>
         </footer>
 
     </div>
